// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTA Box renders the correct content 1`] = `
<div
  className="px-6 md:px-12 transition-all -mt-20 md:mt-0 bg-inherit text-slate-700 dark:text-slate-200"
>
  <div
    className="max-w-site-md lg:max-w-site-lg mx-auto translate-y-1/2 bg-white dark:bg-gradient-to-br dark:from-slate-600 dark:to-slate-800 py-12 px-8 md:px-10 lg:py-16 lg:px-12 rounded-3xl shadow-lg transition-all overflow-hidden"
  >
    <section
      className="grid grid-cols-1 items-center justify-items-center max-w-sm mx-auto gap-4 md:gap-12 md:grid-cols-2 md:max-w-full lg:grid-cols-3 lg:gap-16"
    >
      <h2
        className="transition-all font-heading font-black text-3xl md:text-4xl text-slate-900 dark:text-slate-50"
        data-testid="cta-box-header"
      >
        Let's get in touch
      </h2>
      <p
        className="text-lg"
      >
        Contact me to discuss anything web development related, or just to say hi!
      </p>
      <div
        className="md:col-span-full lg:col-auto"
      >
        <a
          className="group leading-none py-4 px-8 text-heading font-bold relative inline-block rounded-lg overflow-hidden z-10 transition-all shadow-lg text-lg font-heading bg-slate-900 text-white dark:bg-white dark:text-slate-900 outline-none ring-slate-900 ring-offset-white dark:ring-white dark:ring-offset-slate-900 ring-0 ring-offset-0 focus:ring-2 focus:ring-offset-2 hover:bg-slate-500 dark:hover:bg-slate-400"
          data-testid="cta-box-link"
          href="/contact"
        >
          Contact me
        </a>
      </div>
    </section>
    <div
      className="shine opacity-50 dark:opacity-40"
    />
  </div>
</div>
`;

exports[`Home Hero renders the correct content 1`] = `
<div
  className="py-12 px-6 md:py-24 md:px-12 transition-all bg-white dark:bg-slate-900 text-base sm:text-lg lg:flex lg:items-center lg:min-h-[calc(100vh-5rem)]"
>
  <div
    className="max-w-site-sm md:max-w-site-md lg:max-w-site-lg mx-auto"
  >
    <div
      className="max-w-prose"
    >
      <div
        className="mb-6 md:mb-8 relative z-10 inline-block"
      >
        <h1
          className="transition-all font-heading font-black text-4xl md:text-5xl lg:text-6xl text-slate-900 dark:text-white mb-3 md:mb-4"
        >
          Jon Rutter
        </h1>
        <h2
          className="transition-all font-heading font-black text-2xl md:text-3xl lg:text-4xl text-slate-800 dark:text-slate-100"
        >
          Building websites that shine
        </h2>
        <div
          className="shine opacity-50 dark:opacity-40"
        />
      </div>
      <p
        className="mb-4"
      >
        Hello and welcome! I'm a front-end web developer specializing in building performative, accessible, and responsive websites with React.
      </p>
      <p
        className="mb-4"
      >
        I'm passionate about building great websites for my clients, contributing to open source projects, and expanding my knowledge about web and software development.
      </p>
      <div
        className="text-center md:text-left mt-8 md:mt-8 flex flex-col sm:flex-row sm:items-center space-y-6 sm:space-y-0 sm:space-x-8"
      >
        <a
          className="group leading-none py-4 px-8 text-heading font-bold relative inline-block rounded-lg overflow-hidden z-10 transition-all shadow-lg text-lg font-heading bg-slate-900 text-white dark:bg-white dark:text-slate-900 outline-none ring-slate-900 ring-offset-white dark:ring-white dark:ring-offset-slate-900 ring-0 ring-offset-0 focus:ring-2 focus:ring-offset-2 hover:bg-slate-500 dark:hover:bg-slate-400 w-full sm:w-auto"
          href="/contact"
        >
          Contact me
        </a>
        <a
          className="group leading-none py-[calc(1rem-2px)] px-[calc(2rem-2px)] text-heading font-bold relative inline-block rounded-lg overflow-hidden z-10 transition-all shadow-lg text-lg font-heading bg-white text-slate-500 hover:text-slate-900 focus:text-slate-900 dark:focus:text-white focus:outline-none dark:bg-slate-900 dark:text-slate-300 dark:hover:text-white border-2 border-slate-500 dark:border-slate-300 outline-none ring-slate-900 ring-offset-white dark:ring-white dark:ring-offset-slate-900 ring-0 ring-offset-0 focus:ring-2 focus:ring-offset-2 hover:border-slate-900 dark:hover:border-white w-full sm:w-auto"
          href="/portfolio"
        >
          My portfolio
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Portfolio Hero renders the correct content 1`] = `
<div
  className="py-12 px-6 md:py-24 md:px-12 transition-all bg-white dark:bg-slate-900 text-base sm:text-lg lg:flex lg:items-center lg:min-h-[calc(100vh-5rem)]"
>
  <div
    className="max-w-site-sm md:max-w-site-md lg:max-w-site-lg mx-auto"
  >
    <div
      className="max-w-prose"
    >
      <div
        className="mb-6 md:mb-8 relative z-10 inline-block"
      >
        <h1
          className="transition-all font-heading font-black text-4xl md:text-5xl lg:text-6xl text-slate-900 dark:text-white mb-3 md:mb-4"
        >
          My portfolio
        </h1>
        <h2
          className="transition-all font-heading font-black text-2xl md:text-3xl lg:text-4xl text-slate-800 dark:text-slate-100"
        >
          Check out some of my latest work
        </h2>
        <div
          className="shine opacity-50 dark:opacity-40"
        />
      </div>
      <p
        className="mb-4"
      >
        Here are some of my recent projects and client websites.
      </p>
      <p
        className="mb-4"
      >
        Feel free to also check out my GitHub account to see more of my projects and open source contributions.
      </p>
      <div
        className="text-center md:text-left mt-8 md:mt-8 flex flex-col sm:flex-row sm:items-center space-y-6 sm:space-y-0 sm:space-x-8"
      >
        <a
          className="group leading-none py-4 px-8 text-heading font-bold relative inline-block rounded-lg overflow-hidden z-10 transition-all shadow-lg text-lg font-heading bg-slate-900 text-white dark:bg-white dark:text-slate-900 outline-none ring-slate-900 ring-offset-white dark:ring-white dark:ring-offset-slate-900 ring-0 ring-offset-0 focus:ring-2 focus:ring-offset-2 hover:bg-slate-500 dark:hover:bg-slate-400 w-full sm:w-auto"
          href="/contact"
        >
          Contact me
        </a>
        <a
          className="group leading-none py-[calc(1rem-2px)] px-[calc(2rem-2px)] text-heading font-bold relative inline-block rounded-lg overflow-hidden z-10 transition-all shadow-lg text-lg font-heading bg-white text-slate-500 hover:text-slate-900 focus:text-slate-900 dark:focus:text-white focus:outline-none dark:bg-slate-900 dark:text-slate-300 dark:hover:text-white border-2 border-slate-500 dark:border-slate-300 outline-none ring-slate-900 ring-offset-white dark:ring-white dark:ring-offset-slate-900 ring-0 ring-offset-0 focus:ring-2 focus:ring-offset-2 hover:border-slate-900 dark:hover:border-white w-full sm:w-auto"
          href="https://github.com/rutterjt"
        >
          My GitHub
        </a>
      </div>
    </div>
  </div>
</div>
`;
